2008-03-21  Andras Varga

	Fixed a number of issues with the Aqua-based Tcl/Tk on Mac OS/X:
	- tooltips got focus. solution: magic code from http://wiki.tcl.tk/3060
	- focus problem in dialogs (no initial focus when dialog came up)
	  solution: introduced proc setinitialdialogfocus
        - some "(help)" links in dialogs didn't work due to focus problems
          solution: introduced proc waitforfocus
	- button 2 and 3 are reversed (compared to X11 and Windows)
	  solution: use variables $B2 and $B3

2008-02-23  Andras Varga

	Summary of changes for omnetpp-4.0 (2006..2008):

	* inifile syntax change: [Tkenv] config entries became tkenv-...;
	however, see below:

	* inifile entries for options that also appear in the Simulation
	Options dialog have been REMOVED: tkenv-slowexec-delay=,
	tkenv-update-freq-fast=, tkenv-animation-enabled=, etc., because
	they took no effect anyway (when a .tkenvrc file was present,
	settings were taken from that instead of omnetpp.ini).

	* default configuration and default run number (they cause the
	network to be set up automatically when Tkenv starts up)
	can be specified with -c and -r command-line options or the
	tkenv-default-config= and tkenv-default-run= ini file options.

	* OMNETPP_BITMAP_PATH environment variable is now called
	OMNETPP_IMAGE_PATH

	* likewise, the [Tkenv]/bitmap-path= inifile option is now
	called tkenv-image-path=.

	* implemented zooming

	* implemented "hide module names" feature

	* display string improvements:
	 - multiple "r" and "t" tags supported per submodule (as "r1", "r2" etc);
	 - added "bgt" tag: bgt=<x>,<y>,<text>,<color>; multiple tags supported ("bgt1","bgt2",etc)
	 - added support for new display string tags: bgi, bgg, bgs, bgg,... ; made consistent with NED editor

	* NOTE: icon names (png/gif file names) MUST BE lowercase

	* added support for reading PNG images as icons, using TkPNG 0.7
	(https://sourceforge.net/projects/tkpng/). Checking in a copy of