@@ -1,3 +1,8 @@
+2008-03-29  Andras Varga
+
+	* Implemented context menu for text windows. Includes Word wrap on/off,
+	and Select all (Ctrl+A) features
+
 2008-03-21  Andras Varga
 
 	Fixed a number of issues with the Aqua-based Tcl/Tk on Mac OS/X:
